[gd_scene load_steps=20 format=3 uid="uid://cpbrfn3i5jvui"]

[ext_resource type="Texture2D" uid="uid://i1v6d8iq58ox" path="res://Idle Tycoon Assets/Sprites/Fondo.png" id="1_jm17p"]
[ext_resource type="Texture2D" uid="uid://dv0tmb053vwcd" path="res://Idle Tycoon Assets/Sprites/Counter.png" id="2_fc1p2"]
[ext_resource type="Texture2D" uid="uid://drjydg6is1r5f" path="res://Idle Tycoon Assets/Sprites/Counter_half.png" id="3_fc1p2"]
[ext_resource type="PackedScene" uid="uid://wtwkuvkvgd8h" path="res://scenes/cashier/cashier.tscn" id="4_bfxw3"]
[ext_resource type="Texture2D" uid="uid://dlxagrf2rxh05" path="res://Idle Tycoon Assets/Sprites/UI/Coffee.png" id="4_ssgoc"]
[ext_resource type="Script" uid="uid://cylrotp8b38t6" path="res://scenes/manager/customer_manager.gd" id="5_7dfdq"]
[ext_resource type="Texture2D" uid="uid://no28cjn2vsln" path="res://Idle Tycoon Assets/Sprites/UI/Burger.png" id="5_cueac"]
[ext_resource type="Script" uid="uid://n8t7oeuf1cdn" path="res://data/customer_data.gd" id="6_5rpqn"]
[ext_resource type="Resource" uid="uid://bc772q7slvey" path="res://data/customer_green.tres" id="7_yvoo5"]
[ext_resource type="Resource" uid="uid://dmly0xejtwbcn" path="res://data/customer_pink.tres" id="8_y7cus"]
[ext_resource type="Resource" uid="uid://bunjlsbwnidby" path="res://data/customer_purple.tres" id="9_wg16f"]
[ext_resource type="Resource" uid="uid://c3i83okngynmy" path="res://data/customer_red.tres" id="10_u6w8h"]
[ext_resource type="Resource" uid="uid://b48ikqreww55s" path="res://data/customer_yellow.tres" id="11_ssgoc"]
[ext_resource type="PackedScene" uid="uid://wc0q8r5de70" path="res://scenes/customer/customer.tscn" id="12_yvoo5"]
[ext_resource type="Script" uid="uid://df2np1jm3ynbb" path="res://scenes/manager/cashier_manager.gd" id="13_wg16f"]
[ext_resource type="Script" uid="uid://045a07cxs2xs" path="res://scenes/manager/counter_manager.gd" id="13_y7cus"]
[ext_resource type="Script" uid="uid://bb8kr0v86xhiq" path="res://scenes/Game/game_ui.gd" id="17_cueac"]
[ext_resource type="PackedScene" uid="uid://8ubp2xjcuqhl" path="res://scenes/ui/upgrade_panel.tscn" id="18_r8o54"]
[ext_resource type="Texture2D" uid="uid://nos5blhg2lyi" path="res://Idle Tycoon Assets/Sprites/UI/Arrow.png" id="18_rsxsa"]

[node name="Game" type="Node2D"]

[node name="BG" type="Sprite2D" parent="."]
texture = ExtResource("1_jm17p")
centered = false

[node name="MainCounter" type="Sprite2D" parent="."]
position = Vector2(531, 855)
scale = Vector2(0.9, 0.9)
texture = ExtResource("2_fc1p2")

[node name="CoffeeCounter" type="Sprite2D" parent="."]
position = Vector2(417, 1382)
scale = Vector2(0.8, 0.9)
texture = ExtResource("3_fc1p2")

[node name="Sprite2D" type="Sprite2D" parent="CoffeeCounter"]
position = Vector2(-78.75, -52.2222)
scale = Vector2(0.35, 0.35)
texture = ExtResource("4_ssgoc")

[node name="BurgerCounter" type="Sprite2D" parent="."]
position = Vector2(657, 1382)
scale = Vector2(0.8, 0.9)
texture = ExtResource("3_fc1p2")

[node name="Sprite2D" type="Sprite2D" parent="BurgerCounter"]
position = Vector2(-73.75, -74.4445)
scale = Vector2(0.4, 0.4)
texture = ExtResource("5_cueac")

[node name="CustomerManager" type="Node" parent="." node_paths=PackedStringArray("spawn_positions")]
script = ExtResource("5_7dfdq")
spawn_positions = [NodePath("TopSpawnerPos"), NodePath("BottomSpawnPos")]
customer_sprites = Array[ExtResource("6_5rpqn")]([ExtResource("7_yvoo5"), ExtResource("8_y7cus"), ExtResource("9_wg16f"), ExtResource("10_u6w8h"), ExtResource("11_ssgoc")])
customer_scene = ExtResource("12_yvoo5")

[node name="TopSpawnerPos" type="Marker2D" parent="CustomerManager"]
position = Vector2(-77, 193)

[node name="BottomSpawnPos" type="Marker2D" parent="CustomerManager"]
position = Vector2(-77, 640)

[node name="SpawnTimer" type="Timer" parent="CustomerManager"]
wait_time = 3.5
autostart = true

[node name="CounterManager" type="Node" parent="." node_paths=PackedStringArray("counter_positions")]
unique_name_in_owner = true
script = ExtResource("13_y7cus")
counter_positions = [NodePath("Pos_0"), NodePath("Pos_1"), NodePath("Pos_2"), NodePath("Pos_3")]

[node name="Pos_0" type="Marker2D" parent="CounterManager"]
position = Vector2(370, 740)

[node name="Pos_1" type="Marker2D" parent="CounterManager"]
position = Vector2(480, 740)

[node name="Pos_2" type="Marker2D" parent="CounterManager"]
position = Vector2(590, 740)

[node name="Pos_3" type="Marker2D" parent="CounterManager"]
position = Vector2(700, 740)

[node name="CashierManager" type="Node" parent="." node_paths=PackedStringArray("spawn_pos")]
script = ExtResource("13_wg16f")
cashier_scene = ExtResource("4_bfxw3")
spawn_pos = NodePath("SpawnPos")

[node name="SpawnPos" type="Marker2D" parent="CashierManager"]
position = Vector2(521, 1081)

[node name="GameUI" type="CanvasLayer" parent="."]
script = ExtResource("17_cueac")

[node name="CoffeButton" type="TextureButton" parent="GameUI"]
offset_left = 407.0
offset_top = 1317.0
offset_right = 471.0
offset_bottom = 1381.0
texture_normal = ExtResource("18_rsxsa")

[node name="BurgerButton" type="TextureButton" parent="GameUI"]
offset_left = 659.0
offset_top = 1317.0
offset_right = 723.0
offset_bottom = 1381.0
texture_normal = ExtResource("18_rsxsa")

[node name="CoffeUpgradePanel" parent="GameUI" instance=ExtResource("18_r8o54")]
visible = false
offset_left = 265.0
offset_top = 530.0
offset_right = -265.0
offset_bottom = -740.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BurgerUpgradePanel" parent="GameUI" instance=ExtResource("18_r8o54")]
visible = false
offset_left = 265.0
offset_top = 530.0
offset_right = -265.0
offset_bottom = -740.0

[connection signal="timeout" from="CustomerManager/SpawnTimer" to="CustomerManager" method="_on_spawn_timer_timeout"]
[connection signal="pressed" from="GameUI/CoffeButton" to="GameUI" method="_on_coffe_button_pressed"]
[connection signal="pressed" from="GameUI/BurgerButton" to="GameUI" method="_on_burger_button_pressed"]
